kubernetes/sync/seafile/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seafile
  namespace: sync
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "seafile.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seafile
          port: 80
